<resources>
    <string name="app_name">DocsUIPickerDemo</string>
    <string-array name="mime_types">
        <item>*/*</item>
        <item>application/pdf</item>
        <item>image/*</item>
        <item>video/*</item>
        <item>audio/*</item>
        <item>text/plain</item>
    </string-array>
    <string name="main_menu_title">Document Picker Demo</string>
    <string name="open_document">Open Document</string>
    <string name="create_document">Create Document</string>
    <string name="open_document_tree">Open Document Tree</string>
    <string name="hint_enter_file_name">Enter file name (e.g. myfile.txt)</string>
    <string name="open_folder">Open Folder</string>
    <string name="file_info">Selected file:\nName: %1$s\nType: %2$s\nSize: %3$s</string>
    <string name="unknown">Unknown</string>
    <string name="select_file_type">Select file type</string>
    <string name="no_file_selected">No file selected</string>
    <string name="no_files_selected">No files selected</string>
    <string name="selected_files">Selected files:\n\n%1$s</string>
    <string name="select_directory">Select Directory</string>
    <string name="no_directory_selected">No directory selected</string>
    <string name="selected_directory">Selected directory:\n%s</string>
    <string name="back_to_main">Back to Main Menu</string>
    <string name="open_document_title">Open Document</string>
    <string name="multi_select">Enable Multi-Select</string>
    <string name="select_mime_type">Select File Type</string>
    <string name="pick_file">Pick a File</string>
    <string name="create_document_title">Create Document</string>
    <string name="enter_file_name">Enter file name (e.g., new_file.txt)</string>
    <string name="create_file">Create File</string>
    <string name="open_document_tree_title">Open Document Tree</string>
    <string name="pick_directory">Pick Directory</string>
</resources>